Vex dialogs: fix misaligned textareas
instroducs by a5016d547c6242f6f9b28748b5724b0bc10cdb67

Reviewed-on: https://gerrit.libreoffice.org/c/online/+/99634
Tested-by: Jenkins
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -853,7 +853,11 @@ input[type=checkbox][disabled] {
 	width: -webkit-fill-available !important;
 }
 
-.ui-edit.mobile-wizard, textarea {
+.ui-edit.mobile-wizard {
+	/*
+	, textarea was also here assign but it was messing up with all textareas (annotations on desktop and vex on mobile):
+	- added 93038: jsdialog: style dialogs; a5016d547c6242f6f9b28748b5724b0bc10cdb67
+	*/
 	width: -moz-available;
 	width: -webkit-fill-available;
 	margin: 10px 5% 10px 5% !important;
